--- a/S01.01-Exercise-CreateLayout/app/src/main/res/layout/activity_forecast.xml
+++ b/S01.01-Exercise-CreateLayout/app/src/main/res/layout/activity_forecast.xml
@@ -16,12 +16,13 @@
 -->
 <!--TODO (1) Change the ConstraintLayout to a FrameLayout-->
 <!--TODO (7) Remove the line that declares the id, we don't need it-->
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_main"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android">
+
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <!--TODO (8) Wrap the TextView in a ScrollView-->
     <!--TODO (9) Set the ScrollView width to match_parent and the height to wrap_content-->
 
@@ -34,9 +35,7 @@
         android:id="@+id/text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="@+id/activity_main"
-        app:layout_constraintLeft_toLeftOf="@+id/activity_main"
-        app:layout_constraintRight_toRightOf="@+id/activity_main"
-        app:layout_constraintTop_toTopOf="@+id/activity_main" />
-</android.support.constraint.ConstraintLayout>
+        android:textSize="20sp"
+        android:padding="16dp" />
+    </ScrollView>
+</FrameLayout>
